# typesafe_config

./: .gitignore  README.md  demo.py  main.py  pyproject.toml  test_conf.toml  typesave_config.py
src/: demo.py  test_conf.toml
src/typesafe_config/: __init__.py  typesafe_config.py
