[project]
name = "typesave-config"
version = "0.1.0"
description = "TypeSafe-Config is an easy-to-use python appplication configuration-management system with fully support for python's type-hints used by your IDE. Thanks to pydantic :-*"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pip>=25.1.1",
    "pydantic>=2.11.7"
]
