[project]
name = "typesafe-config"
version = "0.1.0"
description = "TypeSafe-Config is an easy-to-use python appplication configuration-management system with fully support for python's type-hints used by your IDE. Thanks to pydantic :-*. Loads the configuration-data from toml- or json-files, cli-arguments and env-vars, in that order. [python >=3.11 for tomllib]"
license = "GPL-3.0-or-later"
license-files = ["license.txt"]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pip>=25.1.1",
    "pydantic>=2.11.7"
]

# [build-system]
# requires = ["uv_build>=0.7.19,<0.8.0"]
# build-backend = "uv_build"
